# mlkem-rs

./: .gitignore  AUDIT_SCOPE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAL_VERIFICATION.md  README.md  SECURITY.md  SIDE_CHANNELS.md  SUPPLY_CHAIN.md  SUPPORT.md  deny.toml
.github/workflows/: ci.yml
benches/: benches.rs
examples/: generic_kem.rs  handshake.rs  serde_save_restore.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decap_no_panic_768.rs  encap_no_panic_768.rs  round_trip_512.rs  tampered_ct_implicit_reject_768.rs
src/: compress.rs  field.rs  hash.rs  kpke.rs  lib.rs  mlkem.rs  ntt.rs  params.rs  poly.rs  sample.rs  serialize.rs
tests/: api.rs  cross_check.rs  kat.rs  nist_kats.rs  serde_roundtrip.rs  stress.rs  timing.rs
