[package]
name = "mlkem"
version = "0.1.0"
edition = "2021"
description = "ml-kem (kyber) post-quantum key encapsulation, from scratch in pure rust, nist-kat verified"
license = "MIT OR Apache-2.0"
repository = "https://github.com/f4rkh4d/mlkem-rs"
keywords = ["crypto", "post-quantum", "kem", "kyber", "ml-kem"]
categories = ["cryptography"]

[dependencies]
sha3 = "0.10"
rand_core = "0.6"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
hex = "0.4"
ml-kem = { version = "0.2", features = ["deterministic"] }
criterion = "0.5"

[[bench]]
name = "benches"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
