[package]
name = "mlkem-rs"
version = "0.5.0"
edition = "2021"
description = "ml-kem (kyber) post-quantum key encapsulation, from scratch in pure rust, all three security levels, nist-kat verified"
license = "MIT OR Apache-2.0"
repository = "https://github.com/f4rkh4d/mlkem-rs"
readme = "README.md"
keywords = ["crypto", "post-quantum", "kem", "kyber", "ml-kem"]
categories = ["cryptography", "no-std"]

[lib]
name = "mlkem"

[features]
default = ["std"]
std = ["sha3/std", "rand_core/std", "subtle/std", "zeroize/std"]

[dependencies]
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
ml-kem = { version = "0.2", features = ["deterministic"] }
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "benches"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
